--- a/department-service/pom.xml
+++ b/department-service/pom.xml
@@ -106,25 +106,43 @@
 
     <profiles>
         <profile>
-            <id>build-image</id>
+             <id>build-image</id>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.springframework.boot</groupId>
-                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <groupId>com.google.cloud.tools</groupId>
+                        <artifactId>jib-maven-plugin</artifactId>
+                        <version>3.4.0</version>
                         <configuration>
-                            <image>
-                                <name>piomin/${project.artifactId}:${project.version}</name>
-                            </image>
+                            <to>
+                                <image>piomin/${project.artifactId}:${project.version}</image>
+                            </to>
                         </configuration>
                         <executions>
                             <execution>
                                 <goals>
-                                    <goal>build-image</goal>
+                                    <goal>dockerBuild</goal>
                                 </goals>
+                                <phase>package</phase>
                             </execution>
                         </executions>
                     </plugin>
+                    <!--					<plugin>-->
+                    <!--						<groupId>org.springframework.boot</groupId>-->
+                    <!--						<artifactId>spring-boot-maven-plugin</artifactId>-->
+                    <!--						<configuration>-->
+                    <!--							<image>-->
+                    <!--								<name>piomin/${project.artifactId}:${project.version}</name>-->
+                    <!--							</image>-->
+                    <!--						</configuration>-->
+                    <!--						<executions>-->
+                    <!--							<execution>-->
+                    <!--								<goals>-->
+                    <!--									<goal>build-image</goal>-->
+                    <!--								</goals>-->
+                    <!--							</execution>-->
+                    <!--						</executions>-->
+                    <!--					</plugin>-->
                 </plugins>
             </build>
         </profile>
